# IndianLiteracyRate

./: MiniProjectMain.ipynb  README.md  pyproject.toml
