[project]
name = "web-scraping-data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "html5lib>=1.1",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.10",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
